[tool.poetry]
name = "unit-converter"
version = "0.1.0"
description = "A simple unit converter app"
authors = ["Marium Umair <mariamscorpion1@gmail.com>"]
readme = "README.md"
packages = [{include = "unit_converter"}]
  
[tool.poetry.dependencies]
python = ">=3.12,<3.14"
streamlit = "^1.30.0"
pandas = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
